lesson-3/cheddar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheddar-deployment
  labels:
    app: cheddar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
      - name: cheddar
        image: andreybyhalenko/cheddar:1.0.1
        resources:
            limits:
              memory: 200Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
        ports:
        - containerPort: 80
