lesson-3/gouda-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gouda-deployment
  labels:
    app: gouda
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gouda
  template:
    metadata:
      labels:
        app: gouda
    spec:
      containers:
      - name: gouda
        image: andreybyhalenko/gouda:1.0.1
        resources:
            limits:
              memory: 200Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
        ports:
        - containerPort: 80
